# bayesflow-hpo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: search-space-reviewer.md
.github/workflows/: ci.yml
dev/: TODO.md
dev/plans/: plan-custom-approximator-hooks.md  plan-initial-design.md  plan-multi-metric-plots.md
docs/: TODO.md  api_reference.md  architecture.md  defaults.md  index.md  optimization.md  quality_report.md  results.md  search_spaces.md  validation.md
examples/: custom_summary_network.ipynb  multi_objective.ipynb  optuna_dashboard.md  quickstart.ipynb  quickstart_executed.ipynb
src/bayesflow_hpo/: __init__.py  api.py  objectives.py  pipeline.py  registration.py  types.py  utils.py
tests/: conftest.py  test_api.py  test_infer_keys.py  test_objectives.py  test_pipeline.py  test_registration.py  test_utils.py  test_visualization.py
tests/test_builders/: test_registry.py  test_workflow.py
tests/test_optimization/: test_callbacks.py  test_checkpoint_pool.py  test_cleanup.py  test_constraints.py  test_multi_objective_pruning.py  test_objective.py  test_optimize_until.py  test_resume.py  test_sampling.py  test_study_warm_start.py
tests/test_results/: test_extraction.py
tests/test_search_spaces/: test_composite_space.py  test_coupling_flow_space.py  test_flow_matching_space.py  test_phase2_spaces.py  test_registry.py  test_selection_spaces.py
tests/test_validation/: test_metric_registry.py  test_phase3_metrics.py  test_result.py  test_validation_data.py
(+57 files in other folders)
